Added handling of the new node style in sessions.